syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.userservice";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}